# e-nose

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  client_server.py  csv_clean.py  edit_data.py  filter_zero_rows.py  hint.txt  odor_classifier.py  pyproject.toml  server.py  server_smell_classifier.py  smell_classifier.py
data/: README.md
docker/: Dockerfile-client  Dockerfile-cu124
docs/: CLIENT_QUICKSTART.md  SERVER_CLIENT_GUIDE.md  SETUP.md
enose/: README.md  __init__.py  config.py
enose/classifier/: README.md  __init__.py  balanced_rf.py  base.py  config.py  diagnostics.py  persistence.py  preprocessing.py  training.py  xgb.py  xgb_config.py  xgb_features.py  xgb_tabular.py
enose/client/: README.md  __init__.py  api.py  live.py  main.py  pipeline.py  sensors.py  session.py  webcam.py
enose/sensors/: __init__.py
enose/server/: README.md  __init__.py  app.py  live_buffer.py  model_loader.py  schemas.py  state.py
enose/server/routes/: __init__.py  analytics.py  health.py  live.py  smell.py  training.py  ui.py
enose/utils/: __init__.py  csv_io.py  segment_aggregate.py
enose/vision/: __init__.py  florence.py  gpu.py
enose/visualization/: README.md  __init__.py  calibration.py  confusion.py  data_quality.py  environmental.py  feature_plots.py  generate.py  per_class_importance.py
scripts/: replay.py  run_client.py  run_server.py  smoke_test.py
trained_models/: README.md
